--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@
   root: ":root";
   include: ;
   exclude: ;
-  prefix: ;
+  prefix: "";
   logs: true;
 }
 
 h1 {
-  @apply text-3xl;
+  @apply text-4xl;
 }
